# Pesky

./: .gitignore  README.md
Client/: .gitignore  pom.xml
Client/src/main/java/: module-info.java
Client/src/main/java/pl/ROFS/: Controller.java  PeskyClient.java
Client/src/main/java/pl/ROFS/controllers/: AudioController.java  ClientController.java  ConnectionController.java  VideoController.java
Client/src/main/java/pl/ROFS/threads/: CameraCaptureThread.java  ConnectThread.java  DisconnectWatchdogThread.java  ReceiveFromServerThread.java  SendMicrophoneThread.java
Client/src/main/resources/pl/ROFS/: application.fxml  sample.fxml
Client/src/pl/grupaPelnaBledow/: AudioCapture01.java  Main.java  NetworkTest.java
Server/: .gitignore  CMakeLists.txt  README.md  compile.sh
Server/src/: constants.h  main.c  main_server.c  main_server.cpp  main_server.h  messaging.c  messaging.h  thread.c  thread.h
Server/src/structs/: list_head.c  list_head.h  user.c  user.h
src/pl/grupaPelnaBledow/: AudioCapture01.java  Main.java
